<resources>
    <string name="app_name">ToggleApp</string>
    <string name="msg_btn_toggle">toggle</string>
    <string name="msg_btn_finish">finish</string>
    <string name="contentDescriptionImageButton">Icon</string>
    <string name="msg_short_toast">Short Toast</string>
    <string name="msg_long_toast">Long Toast</string>
    <string name="textviewMsg">Dies ist eine Textview</string>
    <string name="textviewMsgLong">Dies ist eine sehr langer Text. Es sollte einen Umbruch geben. Hoffentlich reicht das aus.</string>
    <string name="textviewFormatedMsg">normal,<b>fett</b>,<i>krusiv</i>,<u>unterstrichen</u>></string>
    <string name="msgBtnTextView">Text</string>
    <string name="msgBtnFontSize">Fontsize</string>
    <string name="msgBtnFG">FG</string>
    <string name="msgBtnBG">BG</string>
    <string name="msgBtnUpdate">Update</string>
    <string name="checkBoxActvityName">CheckBox</string>
    <string name="msgBtnSet">SET</string>
    <string name="spinnerRaeumePromt">Welcher Raum?</string>
    <string-array name="textviewMsgs">
        <item>Eins</item>
        <item>Zwei</item>
        <item>Und so weiter</item>
    </string-array>
    <string-array name="greetings">
        <item>Hallo</item>
        <item>Salut</item>
        <item>Hola</item>
    </string-array>
    <string-array name="raeume">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
        <item>A6</item>
    </string-array>
    <string-array name="widgets">
        <item>Main</item>
        <item>Toast</item>
        <item>TextView</item>
        <item>EditText</item>
        <item>CheckBox</item>
        <item>RadioGroup</item>
        <item>Spinner</item>
        <item>ScrollView</item>
        <item>DatePicker</item>
        <item>TimePicker</item>
    </string-array>

</resources>