<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/msg_btn_finish"
            style="@style/ToggleStyle.Important"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/btn_toggle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/msg_btn_toggle"
            style="@style/ToggleStyle"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/btn_image"
        android:contentDescription="@string/contentDescriptionImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        />
</LinearLayout>